methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:3: error: Boolean does not take parameters
  if (versLAvant()==true) {
                ^MethodsArgs:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return true
         ^MethodsArgs:8: warning: enclosing method move has result type Unit: return value discarded
  return true
  ^